--- a/project-web/src/app/shared/review/review-add/review-add.component.html
+++ b/project-web/src/app/shared/review/review-add/review-add.component.html
@@ -1,13 +1,12 @@
-<form class="create-review">
-  <div class="create-review__inner">
-    <select class="create-review__select" name="" id="">
-      <option value="">1</option>
-      <option value="">2</option>
-      <option value="">3</option>
-      <option value="">4</option>
-      <option value="" selected>5</option>
-    </select>
-    <textarea class="create-review__textarea"></textarea>
-    <input class="button" type="submit" value="Отправить" />
-  </div>
-</form>
+<div class="container">
+
+  <form class="create-review" [formGroup]="reviewForm" (ngSubmit)="onSubmit()">
+    <div class="create-review__inner">
+      <select formControlName="rate" class="create-review__select" name="rate">
+        <option *ngFor="let rate of rates" [selected]="isSelected(rate)">{{rate}}</option>
+      </select>
+      <textarea formControlName="review" class="create-review__textarea"></textarea>
+      <input class="button" type="submit" value="Сохранить"/>
+    </div>
+  </form>
+</div>
