--- a/project-web/src/app/shared/review/review-add/review-add.component.scss
+++ b/project-web/src/app/shared/review/review-add/review-add.component.scss
@@ -7,23 +7,52 @@
     justify-content: center;
     padding-top: 24px;
   }
+
   &__select {
     text-align: center;
-    width: 5vw;
-    height: 2vw;
+    width: 50px;
+    height: 50px;
     background-color: rebeccapurple;
-    border-radius: 20px;
+    border-radius: 10px;
   }
+
   &__textarea {
     padding: 10px;
 
     margin: 0 32px;
     resize: none;
     height: 80px;
-    width: 55vw;
+    width: 60%;
     border-radius: 20px;
   }
+
   .button {
-    width: 14vw;
+    width: 15%;
   }
 }
+
+
+@media (max-width: 767px) {
+  .create-review {
+    &__select {
+      width: 80%;
+    }
+    &__textarea {
+      width: 80%;
+      height: 160px;
+
+    }
+    .button {
+      width: 70%;
+    }
+    &__inner {
+      gap: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding-top: 24px;
+    }
+  }
+}
+
