--- a/project-web/src/app/scheme/scheme-view/scheme-view.component.html
+++ b/project-web/src/app/scheme/scheme-view/scheme-view.component.html
@@ -1,3 +1,3 @@
 <div class="scheme-display">
-  <canvas #schemecanvas (click)="onClick($event)"></canvas>
+  <canvas style="display: inline-block" #schemecanvas (click)="onClick($event)"></canvas>
 </div>
