start business module

--- a/project-web/src/app/shared/layout/header.component.html
+++ b/project-web/src/app/shared/layout/header.component.html
@@ -13,7 +13,7 @@
             <a class="menu__list-link" routerLink="/restaurants">Рестораны</a>
           </li>
           <li class="menu__list-link">
-            <a class="menu__list-link" href="my-restaurants.html">Мои рестораны</a>
+            <a class="menu__list-link" routerLink="/business">Мои рестораны</a>
           </li>
           <li class="menu__list-link">
             <a class="menu__list-link" href="users.html">Пользователи</a>
