--- a/project-web/src/app/scheme/scheme-add/scheme-add.component.html
+++ b/project-web/src/app/scheme/scheme-add/scheme-add.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="sizeForm" (input)="onInput($event)" class="scheme-add__size">
       <div class="add-restaurant-form__item">
         <label for="width">Ширина</label>
-        <input formControlName="width" class="input" type="text" id="width"/>
+        <input formControlName="width" class="input" type="number" id="width"/>
       </div>
       <div class="add-restaurant-form__item">
         <label for="height">Высота</label>
