--- a/project-web/src/app/business/business-add/business-add.component.scss
+++ b/project-web/src/app/business/business-add/business-add.component.scss
@@ -1,12 +1,10 @@
 .add-restaurant-form {
   text-align: center;
   &__inner {
-    padding-bottom: 20px;
-    padding-top: 20px;
+   padding: 15px 0;
     .button {
       margin: auto;
       width: 60%;
-      margin-bottom: 16px;
       display: block;
     }
   }
@@ -19,13 +17,6 @@
     justify-content: space-between;
     margin: 16px auto;
   }
-  &__size-items {
-    margin: auto;
-    width: 70%;
-    display: flex;
-    justify-content: space-between;
-  }
-
 }
 
 @media (max-width: 1200px) {
