--- a/project-web/src/app/scheme/scheme-add/scheme-add.component.scss
+++ b/project-web/src/app/scheme/scheme-add/scheme-add.component.scss
@@ -4,7 +4,7 @@
   }
 
   &__size {
-    margin: 0 auto;
+    margin: 10px auto;
     width: 60%;
     display: flex;
     justify-content: space-around;
