--- a/project-web/src/app/business/business-add/business-add.component.scss
+++ b/project-web/src/app/business/business-add/business-add.component.scss
@@ -13,6 +13,9 @@
   }
   &__item {
     width: 40%;
+    input{
+      width: 70%;
+    }
     display: flex;
     justify-content: space-between;
     margin: 16px auto;
