--- a/project-web/src/app/business/business-list/business-list.component.scss
+++ b/project-web/src/app/business/business-list/business-list.component.scss
@@ -1,25 +1,84 @@
 .my-restaurants {
+  .button{
+    margin: 10px 0;
+  }
+  height: 100%;
   text-align: center;
   &__inner {
-    padding-top: 22px;
   }
 }
+
 .my-restaurants-list {
   &__item {
     justify-content: space-between;
   }
+
   &__item-info {
+    width: 40%;
     align-items: center;
     display: flex;
     justify-content: space-around;
   }
+
   &__item-text {
     p {
       margin-top: 8px;
     }
+
     padding-left: 24px;
   }
 }
+
+.list {
+  &__item {
+    background: #2385ce;
+    min-height: 120px;
+    border-radius: 36px;
+    margin: 24px 0;
+    padding: 0 60px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  &__item-text {
+    //margin-left: 2vw;
+
+    p {
+      padding-top: 10px;
+    }
+  }
+
+  &__item-content {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .my-restaurants-list {
+    &__item-info {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .list {
+    &__item {
+      padding: 10px 20px;
+    }
+
+    .button {
+      margin: 10px 10px;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+}
+
 
 @media (max-width: 1200px) {
 }
@@ -33,8 +92,10 @@
 
       display: block;
     }
+
     &__item-info {
     }
+
     &__item-text {
       p {
       }
