--- a/project-web/src/app/shared/layout/header.component.html
+++ b/project-web/src/app/shared/layout/header.component.html
@@ -25,7 +25,7 @@
           <span class="hamburger__bar"></span>
         </div>
       </nav>
-      <a class="button header__btn" href="personal.html">Личный кабинет</a>
+      <a class="button header__btn" routerLink="/profile">Личный кабинет</a>
     </div>
   </div>
 </header>
