started profile edit

--- a/project-web/src/app/profile/profile-info/profile-info.component.html
+++ b/project-web/src/app/profile/profile-info/profile-info.component.html
@@ -31,7 +31,7 @@
               <p>{{userinfo.phone}}</p>
             </div>
           </div>
-          <a class="button" href="personal-erdit.html">Редактировать</a>
+          <a class="button" routerLink="/profile/edit">Редактировать</a>
           <a class="button" (click)="onLogout()">Выход</a>
         </div>
       </section>
