added error handling for signup

--- a/project-web/src/app/auth/signup/signup.component.html
+++ b/project-web/src/app/auth/signup/signup.component.html
@@ -14,7 +14,7 @@
         <input formControlName="email" class="input" type="email" name="" id="email"/>
       </div>
       <app-list-errors [errors]="errors"></app-list-errors>
-      <button [disabled]="signupForm.invalid" class="button" type="submit">Зарегистрироваться</button>
+      <button  class="button" type="submit">Зарегистрироваться</button>
       <a routerLink="/login">Войти</a>
     </form>
   </div>
