added about module

--- a/project-web/src/app/shared/layout/header.component.html
+++ b/project-web/src/app/shared/layout/header.component.html
@@ -7,7 +7,7 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__list-link">
-            <a class="menu__list-link" href="index.html">Обзор</a>
+            <a class="menu__list-link" routerLink="/about">Обзор</a>
           </li>
           <li class="menu__list-link">
             <a class="menu__list-link" routerLink="/restaurants">Рестораны</a>
