--- a/project-web/src/app/reservation/user-reservations/user-reservations.component.scss
+++ b/project-web/src/app/reservation/user-reservations/user-reservations.component.scss
@@ -1,4 +1,9 @@
 .book-history {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+
   .title {
     text-align: center;
   }
