--- a/project-web/src/app/shared/details/personal-ava/personal-ava.component.scss
+++ b/project-web/src/app/shared/details/personal-ava/personal-ava.component.scss
@@ -1,6 +1,8 @@
 .personal-avatar {
-  width: 20vw;
-  height: 20vw;
+  // width: 20vw;
+  // height: 20vw;
+  height: 90%;
+  width: 90%;
   border-radius: 100%;
 }
 
