--- a/project-web/src/app/shared/layout/footer.component.scss
+++ b/project-web/src/app/shared/layout/footer.component.scss
@@ -1,11 +1,14 @@
 
 .footer {
   height: 80px;
-  flex: 0 0 auto;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #213e5a;
   position: absolute;
   bottom: 0px;
-  background-color: #213e5a;
+  // flex: 0 0 auto;
 
   font-size: 20px;
   line-height: 26px;
@@ -13,7 +16,8 @@
   &__inner {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 100%;
     height: 80px;
   }
   &__main-content {
