--- a/project-web/src/app/shared/layout/header.component.scss
+++ b/project-web/src/app/shared/layout/header.component.scss
@@ -1,7 +1,11 @@
 .header {
   background-color: rgba(196, 196, 196, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   &__inner {
     min-height: 70px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
