change other pages to suit in container

--- a/project-web/src/app/app.component.html
+++ b/project-web/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="main-wrapper">
   <app-header></app-header>
   <main class="main">
     <router-outlet></router-outlet>
