--- a/project-web/src/app/business/business-list/business-list.component.scss
+++ b/project-web/src/app/business/business-list/business-list.component.scss
@@ -1,9 +1,15 @@
 .my-restaurants {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
   .button{
     margin: 10px 0;
   }
   height: 100%;
   text-align: center;
+
   &__inner {
   }
 }
