--- a/project-web/src/app/restaurant/restaurant-info/restaurant-info.component.scss
+++ b/project-web/src/app/restaurant/restaurant-info/restaurant-info.component.scss
@@ -5,6 +5,8 @@
   &__inner {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 100%;
   }
 }
 :host ::ng-deep app-restaurant-ava  {
