--- a/project-web/src/app/shared/review/review-list/review-list.component.scss
+++ b/project-web/src/app/shared/review/review-list/review-list.component.scss
@@ -1,5 +1,11 @@
 .reviews {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+
+
   &__inner {
     padding-top: 24px;
   }
