--- a/project-web/src/styles.scss
+++ b/project-web/src/styles.scss
@@ -71,7 +71,7 @@ body {
   background-color: #4d4a8b;
   height: 100%;
   max-width: 100%;
-  overflow: hidden;
+  //overflow: hidden;
   color: white;
 }
 
@@ -81,10 +81,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  // max-width: 1230px;
-  // margin: 0 auto;
-  // padding-left: 15px;
-  // padding-right: 15px;
+}
+
+.main-wrapper {
+  height: 100%;
+  margin: 80px 0;
 }
 
 .input {
