--- a/project-web/src/app/app.component.scss
+++ b/project-web/src/app/app.component.scss
@@ -1,15 +1,15 @@
 .wrapper {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  height: 100%;
-  position: relative;
 }
 
 .main {
-  position: absolute;
-  top: 80px;
-  bottom: 80px;
-  width: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // width: 100%;
+  margin: 100px 0;
+  height: 100%;
 }
