--- a/project-web/src/app/reservation/user-reservations/user-reservations.component.scss
+++ b/project-web/src/app/reservation/user-reservations/user-reservations.component.scss
@@ -1,7 +1,7 @@
 .book-history {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
 
   .title {
