--- a/project-web/src/app/restaurant/restaurant-list/restaurant-list.component.scss
+++ b/project-web/src/app/restaurant/restaurant-list/restaurant-list.component.scss
@@ -2,34 +2,29 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  position: absolute;
-  bottom: 0;
+  margin-top: 50px;
 }
 .restaurants {
-  height: 80%;
-  width: 100%;
-  //padding: 20px 0;
-  //padding-bottom: 30px;
-  //max-height: 100%;
-  overflow-y: auto;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   &__inner {
     display: flex;
   }
 }
 
 .restaurants-list {
-  display: grid;
-  grid-gap: 10px;
-  grid-template: repeat(1, 1fr) / repeat(3, 1fr);
-  //grid-auto-flow: row; /* or 'row', 'row dense', 'column dense' */
-  grid-template-rows: auto 240px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
+
+
   &__item {
     justify-self: center;
     border-radius: 12px;
-    margin: 10px 0;
-    padding: 15px 0;
+    padding: 30px 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,6 +33,7 @@
     //width: 240px;
     height: auto;
     background: #90B92E;
+    margin: 10px 20px;
 
     h5 {
       padding-top: 15px;
@@ -46,18 +42,8 @@
   }
 }
 
-
-@media (max-width: 1200px) {
-}
-
 @media (max-width: 992px) {
   .restaurants-list {
-    grid-template: repeat(1, 1fr) / repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 547px) {
-  .restaurants-list {
-    grid-template: repeat(1, 1fr) / repeat(1, 1fr);
+    flex-wrap: wrap;
   }
 }
